[gd_scene load_steps=9 format=3]

[ext_resource type="Script" path="res://scripts/RestoreQuestB.gd" id="1_script"]
[ext_resource type="Theme" path="res://ui/theme_noir_detective.tres" id="2_theme"]
[ext_resource type="PackedScene" path="res://scenes/ui/DiagnosticsPanelB.tscn" id="3_panel"]
[ext_resource type="Script" path="res://ui/overlays/NoirOverlay.gd" id="4_0vmkb"]
[ext_resource type="Script" path="res://scripts/ui/DropZone.gd" id="4_dropzone"]
[ext_resource type="PackedScene" path="res://ui/overlays/NoirOverlay.tscn" id="5_noir"]
[ext_resource type="Theme" path="res://ui/theme_noir_pencil.tres" id="7_mudek"]
[ext_resource type="Script" path="res://scripts/ui/DiagnosticsPanelB.gd" id="8_6p63x"]

[node name="RestoreQuestB" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.06, 0.07, 0.08, 1)

[node name="NoirOverlay" type="CanvasLayer" parent="." instance=ExtResource("5_noir")]
layer = 100
script = ExtResource("4_0vmkb")
intensity = 0.18
fx_quality = 1
tint_color = Color(0.93, 0.93, 0.93, 1)

[node name="SafeArea" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 12

[node name="MainLayout" type="VBoxContainer" parent="SafeArea"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="MainLayout#Header" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="SafeArea_MainLayout_Header#BtnBack" type="Button" parent="."]
custom_minimum_size = Vector2(120, 56)
layout_mode = 2
text = "НАЗАД"

[node name="SafeArea_MainLayout_Header#LblClueTitle" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "ВОССТАНОВЛЕНИЕ B-01"

[node name="SafeArea_MainLayout_Header#LblSessionId" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "СЕССИЯ ИНИЦ."
horizontal_alignment = 2

[node name="MainLayout#BarsRow" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="SafeArea_MainLayout_BarsRow#DecryptBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
size_flags_horizontal = 3
show_percentage = false

[node name="SafeArea_MainLayout_BarsRow#EnergyBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
size_flags_horizontal = 3
value = 100.0
show_percentage = false

[node name="MainLayout#TargetDisplay" type="PanelContainer" parent="."]
layout_mode = 2

[node name="SafeArea_MainLayout_TargetDisplay#LblTarget" type="Label" parent="."]
layout_mode = 2
text = "ЦЕЛЬ: s = ?"
horizontal_alignment = 1

[node name="MainLayout#TerminalFrame" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="SafeArea_MainLayout_TerminalFrame#CodeScroll" type="ScrollContainer" parent="."]
layout_mode = 2

[node name="SafeArea_MainLayout_TerminalFrame_CodeScroll#CodeDisplay" type="RichTextLabel" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "Загрузка кода..."
fit_content = true

[node name="MainLayout#SlotRow" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="SafeArea_MainLayout_SlotRow#DropZone" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(240, 96)
layout_mode = 2
script = ExtResource("4_dropzone")

[node name="SafeArea_MainLayout_SlotRow_DropZone#Label" type="Label" parent="."]
layout_mode = 2
text = "[СЛОТ]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SafeArea_MainLayout_SlotRow#LblSlotHint" type="Label" parent="."]
layout_mode = 2
text = "<-- Перетащите блок сюда"

[node name="MainLayout#InventoryFrame" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="SafeArea_MainLayout_InventoryFrame#InventoryMargin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="SafeArea_MainLayout_InventoryFrame_InventoryMargin#InventoryScroll" type="ScrollContainer" parent="."]
layout_mode = 2

[node name="SafeArea_MainLayout_InventoryFrame_InventoryMargin_InventoryScroll#BlocksContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 14
alignment = 1

[node name="MainLayout#Actions" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="SafeArea_MainLayout_Actions#BtnAnalyze" type="Button" parent="."]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
size_flags_horizontal = 3
text = "АНАЛИЗ"

[node name="SafeArea_MainLayout_Actions#BtnSubmit" type="Button" parent="."]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "ПРОВЕРИТЬ"

[node name="SafeArea_MainLayout_Actions#BtnNext" type="Button" parent="."]
visible = false
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
size_flags_horizontal = 3
text = "ДАЛЕЕ"

[node name="DiagnosticsBlocker" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.45)

[node name="DiagnosticsPanelB" type="PanelContainer" parent="." instance=ExtResource("3_panel")]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_mudek")
script = ExtResource("8_6p63x")
